# logger-kit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api_reference.md  configuration_guide.md  usage_guide.md
examples/: aiohttp_integration.py  django_integration.py  fastapi_integration.py  flask_integration.py  starlette_integration.py  tornado_integration.py
src/logger_kit/: __init__.py  handlers.py  masking.py  version.py
tests/: test_logger.py  test_masking.py  test_metadata.py  test_performance.py
