[project]
name = "logger-kit"
version = "0.0.4"
description = "A high-performance, feature-rich Python logging library with JSON formatting, file rotation, and masking capabilities for sensitive data"
authors = [
    {name = "Rahmad Afandi",email = "rahmadafandiii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "python-json-logger (>=3.3.0,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
]
copyright = "2025, Rahmad Afandi"
license = "MIT"
keywords = ["logger", "logging", "python", "log", "logkit", "json-logging", "log-rotation", "data-masking", "structured-logging", "async-logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
autoflake = "^2.3.1"
pytest-benchmark = "^5.1.0"


[tool.poetry]
packages = [{include = "logger_kit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
